--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-*.DS_Store
-node_modules/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-
-
-# Optional npm cache directory
-.npm
+/node_modules
+npm-debug.log
+.DS_Store
+/*.env
