--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "the lamest mock api ",
   "main": "index.js",
   "scripts": {
-    "api": "node index.js",
-    "start": "node index.js"
+    "start": "pm2 start index.js"
   },
   "repository": {
     "type": "git",
